<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <TextView
            android:text="First Name"
            android:layout_width="120dp"
            android:layout_height="39dp"
            android:id="@+id/textView8"
            android:layout_marginTop="16dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="32dp" android:layout_marginStart="32dp"
            android:contentDescription="First Name" android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:clickable="false" android:textSize="24sp" app:layout_constraintHorizontal_bias="0.666"
            app:layout_constraintEnd_toStartOf="@+id/txtFN" android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp" app:layout_constraintTop_toBottomOf="@+id/textView6"/>
    <TextView
            android:text="Last Name"
            android:layout_width="120dp"
            android:layout_height="39dp"
            android:id="@+id/textView6"
            android:layout_marginTop="16dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="32dp" android:layout_marginStart="32dp"
            android:contentDescription="Last Name" android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:clickable="false" android:textSize="24sp" app:layout_constraintHorizontal_bias="0.666"
            app:layout_constraintEnd_toStartOf="@+id/txtLN" android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp" app:layout_constraintTop_toBottomOf="@+id/textView5"/>
    <EditText
            android:layout_width="202dp"
            android:layout_height="39dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txtLN" android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="180dp" android:layout_marginStart="180dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp" android:hint="@string/txtLN"
            app:layout_constraintStart_toEndOf="@+id/textView6" app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintTop_toBottomOf="@+id/txtZIP"/>
    <EditText
            android:layout_width="202dp"
            android:layout_height="39dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txtFN" android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="180dp" android:layout_marginStart="180dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp" android:hint="@string/txtFN"
            app:layout_constraintStart_toEndOf="@+id/textView8" app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintTop_toBottomOf="@+id/txtLN"/>
    <TextView
            android:text="Zip Code"
            android:layout_width="120dp"
            android:layout_height="39dp"
            android:id="@+id/textView5"
            android:layout_marginTop="16dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="32dp" android:layout_marginStart="32dp"
            android:contentDescription="Zip Code" android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:clickable="false" android:textSize="24sp" app:layout_constraintHorizontal_bias="0.625"
            app:layout_constraintEnd_toStartOf="@+id/txtZIP" android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp" app:layout_constraintTop_toBottomOf="@+id/textView"/>
    <EditText
            android:layout_width="202dp"
            android:layout_height="39dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txtZIP" android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="180dp" android:layout_marginStart="180dp"
            android:hint="@string/txtZIP"
            app:layout_constraintStart_toEndOf="@+id/textView5"
            android:layout_marginEnd="32dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="32dp" app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintTop_toBottomOf="@+id/txtCID"/>
    <TextView
            android:text="Email Id"
            android:layout_width="120dp"
            android:layout_height="39dp"
            android:id="@+id/textView4"
            android:layout_marginTop="16dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="32dp" android:layout_marginStart="32dp"
            android:contentDescription="Email Id" android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:clickable="false" android:textSize="24sp" app:layout_constraintHorizontal_bias="0.666"
            app:layout_constraintEnd_toStartOf="@+id/txtEM" android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp" app:layout_constraintTop_toBottomOf="@+id/textView8"/>
    <EditText
            android:layout_width="202dp"
            android:layout_height="39dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txtCID" android:layout_marginTop="144dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="180dp" android:layout_marginStart="180dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp" android:hint="@string/txtCID"
            app:layout_constraintStart_toEndOf="@+id/textView" app:layout_constraintHorizontal_bias="1.0"/>
    <TextView
            android:text="Customer Id"
            android:layout_width="120dp"
            android:layout_height="39dp"
            android:id="@+id/textView" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="144dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="32dp" android:layout_marginStart="32dp"
            android:contentDescription="Customer Id" android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:clickable="false" android:textSize="24sp" app:layout_constraintHorizontal_bias="0.666"
            app:layout_constraintEnd_toStartOf="@+id/txtCID" android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"/>
    <EditText
            android:layout_width="202dp"
            android:layout_height="39dp"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/txtEM" android:layout_marginTop="16dp"
            android:layout_marginLeft="180dp" android:layout_marginStart="180dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="32dp" android:layout_marginRight="32dp" android:hint="@string/txtEM"
            app:layout_constraintStart_toEndOf="@+id/textView4" app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintTop_toBottomOf="@+id/txtFN"/>
    <ImageButton
            android:layout_width="140dp"
            android:layout_height="40dp"
            android:id="@+id/btnImageSubmit"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp" android:layout_marginTop="436dp"
            app:layout_constraintTop_toTopOf="parent"
            android:onClick="submit" android:src="@drawable/submit" android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
            app:layout_constraintHorizontal_bias="0.497"/>
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:srcCompat="@drawable/logo1" tools:layout_editor_absoluteY="1dp"
            android:id="@+id/imageView" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

    <!--android:layout_width="194dp"
android:layout_height="49dp"-->
</androidx.constraintlayout.widget.ConstraintLayout>
